# BankCoreCPP

./: CMakeLists.txt  Dockerfile  README.md  bash  docker-compose.yml  main.cpp
database/: schema.sql
docker/: docker-compose.yml
docs/: architecture.md
include/: Account.h  Database.h  Transaction.h
src/: Account.cpp  AccountService.cpp  AuthService.cpp  BankSystem.cpp  Customer.cpp  Customer.h  CustomerService.cpp  Database.cpp  TransferService.cpp  main.cpp
tests/: account_tests.cpp
